@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-19T00:35:42Z",
+  "timestamp" : "2024-10-21T00:38:04Z",
   "count_outdated" : 504,
   "uniques_outdated" : 331,
-  "count" : 506,
-  "uniques" : 333,
+  "count" : 508,
+  "uniques" : 335,
   "clones" : [
     {
       "timestamp": "2024-10-08T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
