@@ -1,3 +1,12 @@
+2024-10-21T00:38:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11431050726 # 455
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 331 504 / 333 506
+* notice: next accum: outdated-unq outdated-all / unq all: 331 504 / 335 508
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-10-20]
+
 2024-10-19T00:35:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11412946233 # 453
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-19
